--- a/src/components/SongDisplay/SongDisplaySkeleton.astro
+++ b/src/components/SongDisplay/SongDisplaySkeleton.astro
@@ -1,8 +1,8 @@
 ---
-import "@/styles/songDisplay.css";
+
 ---
 
-<div class="song-display card cflex">
+<div class="song-display cflex">
 	<div class="song-cover skeleton"></div>
 	<div class="song-information-wrapper cflex">
 		<div class="song-title skeleton"></div>
@@ -13,14 +13,29 @@ import "@/styles/songDisplay.css";
 </div>
 
 <style>
-	.song-title.skeleton {
-		width: 50%;
-		height: 28px;
+	.song-title {
+		width: 60%;
+		height: 24px;
 	}
 
-	.entry.skeleton {
+	.entry {
 		grid-column: 1 / span 2;
 		width: 100%;
-		height: 24px;
+		height: 16px;
+	}
+
+	.song-display {
+		gap: var(--size-s);
+	}
+
+	.song-information-wrapper {
+		width: 100%;
+		gap: var(--size-s);
+	}
+
+	.song-cover {
+		aspect-ratio: 1 / 1;
+		width: 100%;
+		height: auto;
 	}
 </style>
