--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Main from "@/layouts/Main.astro";
 import WebringBadge from "astro-webrings/badge";
 import SongDisplay from "@/components/SongDisplay/SongDisplay.astro";
 import SongDisplaySkeleton from "@/components/SongDisplay/SongDisplaySkeleton.astro";
+import Card from "@/components/Card.astro";
 ---
 
 <Main title="Dominic Brauer">
@@ -10,17 +11,21 @@ import SongDisplaySkeleton from "@/components/SongDisplay/SongDisplaySkeleton.as
 		<h1>Dominic Brauer</h1>
 	</section>-->
 	<section class="grid-area cflex">
-		<SongDisplay server:defer>
-			<SongDisplaySkeleton slot="fallback" />
-		</SongDisplay>
-		<div class="webrings rflex card">
-			<WebringBadge site="dominicbrauer.dev" ring="built-with-astro" />
-			<WebringBadge
-				site="dominicbrauer.dev"
-				ring="friends-of-houston"
-				animated
-			/>
-		</div>
+		<Card width={256}>
+			<SongDisplay server:defer>
+				<SongDisplaySkeleton slot="fallback" />
+			</SongDisplay>
+		</Card>
+		<Card width={256} heading="Webrings">
+			<div class="webrings rflex">
+				<WebringBadge site="dominicbrauer.dev" ring="built-with-astro" />
+				<WebringBadge
+					site="dominicbrauer.dev"
+					ring="friends-of-houston"
+					animated
+				/>
+			</div>
+		</Card>
 	</section>
 </Main>
 
@@ -39,9 +44,8 @@ import SongDisplaySkeleton from "@/components/SongDisplay/SongDisplaySkeleton.as
 	}
 
 	.webrings {
-		padding: var(--size-s);
 		gap: var(--size-m);
-		max-width: fit-content;
 		align-items: center;
+		justify-content: left;
 	}
 </style>
